--- a/english_version/cv.tex
+++ b/english_version/cv.tex
@@ -4,71 +4,74 @@
 \usepackage{cmap}
 \usepackage[english]{babel}
 \usepackage[left=0.4in,top=0.4in,right=0.4in,bottom=0.4in]{geometry}
-\newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}} 
+\newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 
 \name{Maksim Kiryakin}
-\address{+7(916) 344-6061 \\ Russia, Moscow}
-\address{\href{mailto:makxim.kiryakin@gmail.com}{makxim.kiryakin@gmail.com} \\ 
-	\href{https://github.com/MaximKiryakin}{www.github.com} \\ 
-	\href{https://t.me/Maxim_Kiryakin}{@Maxim\_Kiryakin}}
+\address{+7 (916) 344-6061 \\ Russia, Moscow}
+\address{\href{mailto:makxim.kiryakin@gmail.com}{makxim.kiryakin@gmail.com} \\
+	\href{https://github.com/MaximKiryakin}{github.com/MaximKiryakin} \\
+	\href{https://www.linkedin.com/in/your-profile}{linkedin.com/in/your-profile}}
 
 \begin{document}
-	
+
+	\begin{rSection}{Summary}
+		\textbf{Data Scientist with 1.5 years of experience} in classical machine learning, econometrics, and mathematical programming.
+		Specializing in scalable ML solutions and financial analytics. Delivered clustering pipeline for 120M+ users and deployed NPV models to production, driving data-driven decision-making. Proficient in Python (PySpark, Pandas), SQL, and end-to-end ML pipelines.
+	\end{rSection}
+
 	\begin{rSection}{Education}
 		\textbf{Lomonosov Moscow State University (Master's degree)} \hfill {September 2024 - Present}\\
-		Faculty of Computational Mathematics and Cybernetics. \\
+		Faculty of Computational Mathematics and Cybernetics (\textit{GPA:} 4.4/5).\\
 		\textbf{Lomonosov Moscow State University (Bachelor's degree)} \hfill {September 2020 - June 2024}\\
-		Faculty of Computational Mathematics and Cybernetics (\textit{Average grade:} 4.3).
+		Faculty of Computational Mathematics and Cybernetics (\textit{GPA:} 4.3/5).
 	\end{rSection}
-	
+
 	\begin{rSection}{Work Experience}
-		\textbf{Sber} \hfill {May 2024 - Present (1 year)}\\
-		Data Scientist in Investment Expertise Directorate (Finance Division) \\
+		\textbf{Sber} \hfill {May 2024 - Present}\\
+		Data Scientist, Investment Expertise Directorate (Finance Division) \\
 		\vspace{-1.25em}
 		\begin{itemize}
-			\itemsep -3pt {}     
-			\item Developed and implemented a customer clustering model (120+ million users) using ML/DL models.
-			\item Conducted R\&D research as part of implementing a new metric for the Bank.
-			\item Performed calculation of the Bank's product NPV using machine learning and econometric models.
-			\item Brought the product NPV calculation model into the Bank's production environment and supported/maintained it.
-			\item Stack: Python (PySpark, Pandas, Scikit-learn), PyTorch, SQL, Git, Excel, Hive.
+			\itemsep -3pt {}
+			\item Architected and productionized a scalable customer clustering pipeline for 120M+ profiles using PySpark.
+			\item Led R\&D to define, implement a new bank-wide metric, including statistical evaluation and experiments.
+			\item Developed, validated, and deployed ML and econometric model to estimate product NPV; integrated them with
+			data pipelines and established monitoring, maintenance, and business-acceptance procedures to ensure robustness and interpretability.
+			\item Stack: Python (PySpark, Pandas, Scikit-learn), SQL, Hive, Git, Excel.
 		\end{itemize}
-		
-		\textbf{Sber} \hfill {August 2023 - March 2024 (6 months)}\\
-		Intern in balance sheet structure department (Finance Division) \\
+
+		\textbf{Sber} \hfill {August 2023 - March 2024}\\
+		Intern, Balance Sheet Structure Department (Finance Division) \\
 		\vspace{-1.25em}
 		\begin{itemize}
-			\itemsep -3pt {}     
-			\item Worked on refactoring code of existing Python prototypes. Implemented a pre-trained ML model that improved target variable prediction quality by 30\%.
-			\item Increased calculation speed by 3 times by optimizing the main loop of Python prototype.
-			\item Automated extraction and processing of large data volumes from HDFS using Python.
-			\item Stack: Python (PySpark, Pandas, Scikit-learn), SQL, Excel, Hive.
+			\itemsep -3pt {}
+			\item Refactored and modularized legacy Python prototypes, added unit tests and documentation to improve maintainability and accelerate onboarding.
+			\item Integrated a pre-trained ML model into the production pipeline, improving target prediction quality by 30\% on validation data and ensuring reproducible inference.
+			\item Optimized the main computation (profiling-driven algorithmic refactor and vectorization), achieving a 3× speedup and reduced memory footprint.
+			\item Developed automated ETL workflows to extract, validate and preprocess large datasets from HDFS using PySpark/Python, with logging and error handling for reliable runs.
+			\item Stack: Python (PySpark, Pandas, Scikit-learn), SQL, Hive, Excel.
 		\end{itemize}
 	\end{rSection}
-	
+
 	\begin{rSection}{Skills}
 		\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-			Programming Languages: & Python (Pandas, NumPy, SciPy, PyTorch, Pyspark), SQL, C/C++ \\
-			Tools: & Git, Excel.
+			Programming: & Python, SQL, C/C++ \\
+			Data \& ML: & PySpark, Pandas, NumPy, SciPy, Scikit-learn, PyTorch, SQL, Hive \\
+			Tools: & Git, Excel \\
+			Concepts: & Feature engineering, clustering, time-series, econometrics, model deployment
 		\end{tabular}\\
 	\end{rSection}
-	
-	\begin{rSection}{Courses}
+
+	\begin{rSection}{Professional Development}
 		\begin{itemize}
-			\item Professional development program from <<New Professions Lab>>: \\ <<Apache Spark for data analysis tasks>>.
+			\item \textit{Apache Spark for Data Analysis Tasks} — New Professions Lab
 			\hfill \href{https://disk.yandex.ru/i/rdkLWd2MTUYy5w}{Certificate (with honors)}
-			
-			\item Professional development program from <<Sber University>>: \\ <<Methods of data analysis and machine learning>>.
+
+			\item \textit{Methods of Data Analysis and Machine Learning} — Sber University
 			\hfill \href{https://disk.yandex.ru/i/7NCFgcRKg5lyYg}{Certificate (with honors)}
-			
-			\item Professional development program from <<Sirius University>>: \\ <<Matrix methods and modeling in life and Earth sciences>>.
-			\hfill \href{https://disk.yandex.ru/i/Pt2aLMVZsGAqCA}{Certificate}
-			
-			\item University special courses from <<Vega Institute>> Foundation: \\ <<Introduction to financial mathematics>> and <<Financial econometrics>>.
-			
-			\item University special course from <<Deutsche Bank Technology Center>>: \\ <<Mathematical models in investment banks>>.
-		\end{itemize}    
+
+			\item \textit{Mathematical Models in Investment Banks} — Deutsche Bank Technology Center
+		\end{itemize}
 	\end{rSection}
-	
+
 \end{document}
