upload(english_version/Sertificate1.png): add sertificate to git upload(english_version/Sertificate2.png): add sertificate to git fix(cv.tex): changa 1.5 to 2+ years; change LinkedIN to telegram;

--- a/english_version/cv.tex
+++ b/english_version/cv.tex
@@ -11,12 +11,13 @@
 \address{+7 (916) 344-6061 \\ Russia, Moscow}
 \address{\href{mailto:makxim.kiryakin@gmail.com}{makxim.kiryakin@gmail.com} \\
 	\href{https://github.com/MaximKiryakin}{github.com/MaximKiryakin} \\
-	\href{https://www.linkedin.com/in/your-profile}{linkedin.com/in/your-profile}}
+	\href{https://t.me/Maxim_Kiryakin}{@Maxim\_Kiryakin} \\
+}%
 
 \begin{document}
 
 	\begin{rSection}{Summary}
-		\textbf{Data Scientist with 1.5 years of experience} in classical machine learning, econometrics, and mathematical programming.
+		\textbf{Data Scientist with 2+ years of experience} in classical machine learning, econometrics, and mathematical programming.
 		Specializing in scalable ML solutions and financial analytics. Delivered clustering pipeline for 120M+ users and deployed NPV models to production, driving data-driven decision-making. Proficient in Python (PySpark, Pandas), SQL, and end-to-end ML pipelines.
 	\end{rSection}
 
