fix(english_version/cv.tex): update paths to sertificates;

--- a/english_version/cv.tex
+++ b/english_version/cv.tex
@@ -66,10 +66,10 @@
 	\begin{rSection}{Professional Development}
 		\begin{itemize}
 			\item \textit{Apache Spark for Data Analysis Tasks} — New Professions Lab
-			\hfill \href{https://disk.yandex.ru/i/rdkLWd2MTUYy5w}{Certificate (with honors)}
+			\hfill \href{https://github.com/MaximKiryakin/My-Resume/blob/master/english_version/Sertificate1.png}{Certificate (with honors)}
 
 			\item \textit{Methods of Data Analysis and Machine Learning} — Sber University
-			\hfill \href{https://disk.yandex.ru/i/7NCFgcRKg5lyYg}{Certificate (with honors)}
+			\hfill \href{https://github.com/MaximKiryakin/My-Resume/blob/master/english_version/Sertificate2.png}{Certificate (with honors)}
 
 			\item \textit{Mathematical Models in Investment Banks} — Deutsche Bank Technology Center
 		\end{itemize}
