fix(english_version/cv.pdf): delete extra dot in header;

--- a/english_version/cv.tex
+++ b/english_version/cv.tex
@@ -12,7 +12,7 @@
 \address{\href{mailto:makxim.kiryakin@gmail.com}{makxim.kiryakin@gmail.com} \\
 	\href{https://github.com/MaximKiryakin}{github.com/MaximKiryakin} \\
 	\href{https://t.me/Maxim_Kiryakin}{@Maxim\_Kiryakin} \\
-	\href{https://www.linkedin.com/in/maxim-kiryakin-8a53a2370/}{LinkedIn} \\
+	\href{https://www.linkedin.com/in/maxim-kiryakin-8a53a2370/}{LinkedIn}
 }
 
 \begin{document}
