fix(cv.tex): enhance summary; update(cv.pdf): recompile pdf;

--- a/english_version/cv.tex
+++ b/english_version/cv.tex
@@ -19,7 +19,7 @@
 
 	\begin{rSection}{Summary}
 		\textbf{Data Scientist with 2+ years of experience} in classical machine learning, econometrics, and mathematical programming.
-		Specializing in scalable ML solutions and financial analytics. Delivered clustering pipeline for 120M+ users and deployed NPV models to production, driving data-driven decision-making. Proficient in Python (PySpark, Pandas), SQL, and end-to-end ML pipelines.
+		Specializing in scalable ML solutions and financial analytics. Delivered clustering pipeline for 120M+ users and deployed NPV models to production, driving data-driven decision-making. Proficient in Python, SQL, and end-to-end ML pipelines.
 	\end{rSection}
 
 	\begin{rSection}{Education}
